fix : sidebar overflowed main-content;

--- a/src/style.scss
+++ b/src/style.scss
@@ -97,7 +97,8 @@ button, li, #user-avatar, .icon-plus, .icon-trash {
   position: fixed;
   float: left;
   width: 246px;
-  height: 100%;
+  top: 60px;
+  bottom: 24px;
   border: solid 1px #eee;
   background-color: $dark-blue;
   .side-menu {
@@ -125,8 +126,7 @@ button, li, #user-avatar, .icon-plus, .icon-trash {
     }
   }
   .history {
-    position: relative;
-    top: 150px;
+    margin-top: 120px;
     .history-title {
       font-size: 24px;
       color: #ccc;
@@ -134,6 +134,8 @@ button, li, #user-avatar, .icon-plus, .icon-trash {
     }
     ul {
       padding-left: 30px;
+      height: 150px;
+      overflow-y: auto;
       li {
         font-size: 12px;
         color: #999;
@@ -159,6 +161,7 @@ button, li, #user-avatar, .icon-plus, .icon-trash {
     .card {
       height: 115px;
       display: flex;
+      display: -webkit-flex;
       -webkit-box-flex: 1;
       position: relative;
       color: #fff;
@@ -239,6 +242,7 @@ button, li, #user-avatar, .icon-plus, .icon-trash {
       height: 50px;
       line-height: 50px;
       display: flex;
+      display: -webkit-flex;
       -webkit-box-flex: 1;
       position: relative;
 
